tests/paczka1/fuzzy1/27314058.err
Error in line 12: tmrVzd1iU7 A532 84,5
Error in line 10: LENqYNFhNNk S267 91,5
Error in line 19: tmrVzd1iU7 S267 27,3
Error in line 26: tmrVzd1iU7 S712 73,9
Error in line 36: YY9PUynfq S712 71,8
Error in line 28: tmrVzd1iU7 A532 51,2
